@@ -1,3 +1,7 @@
+Wed Aug  7 2002 David Reveman (c99drn@cs.umu.se)
+
+   Added delay support to action system
+
 Wed Jun  5 2002 David Reveman (c99drn@cs.umu.se)
 
    *** Waimea v0.3.3 release ***
